--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,6 @@
   "description": "Knob and Slider widgets for music software in the browser",
   "dependencies" : {},
   "devDependencies" : {
-      "pointerevents-polyfill" : "*"
+      "polymer-platform" : "*"
   }
 }
