--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "description": "Knob widget for music software in the browser",
   "dependencies" : {},
   "devDependencies": {
-    "browserify" : "^3.17.0",
+    "browserify" : "3.17.0",
     "debowerify" : "^0.5.1",
     "bower" : "^1.2.8",
     "beefy" : "^0.7.1",
